tests/snapshots/heredoc_nowdoc_tests__basic_heredoc.snap
---
source: tests/heredoc_nowdoc_tests.rs
expression: program
---
Program {
    statements: [
        Expression {
            expr: Assign {
                var: Variable {
                    name: Span {
                        start: 6,
                        end: 11,
                    },
                    span: Span {
                        start: 6,
                        end: 11,
                    },
                },
                expr: InterpolatedString {
                    parts: [
                        String {
                            value: [
                                72,
                                101,
                                108,
                                108,
                                111,
                                32,
                                87,
                                111,
                                114,
                                108,
                                100,
                                10,
                            ],
                            span: Span {
                                start: 21,
                                end: 33,
                            },
                        },
                    ],
                    span: Span {
                        start: 14,
                        end: 36,
                    },
                },
                span: Span {
                    start: 6,
                    end: 36,
                },
            },
            span: Span {
                start: 6,
                end: 38,
            },
        },
    ],
    errors: [],
    span: Span {
        start: 6,
        end: 38,
    },
}
