tests/snapshots/heredoc_nowdoc_tests__heredoc_empty.snap
---
source: tests/heredoc_nowdoc_tests.rs
expression: program
---
Program {
    statements: [
        Expression {
            expr: Assign {
                var: Variable {
                    name: Span {
                        start: 6,
                        end: 11,
                    },
                    span: Span {
                        start: 6,
                        end: 11,
                    },
                },
                expr: InterpolatedString {
                    parts: [],
                    span: Span {
                        start: 14,
                        end: 24,
                    },
                },
                span: Span {
                    start: 6,
                    end: 24,
                },
            },
            span: Span {
                start: 6,
                end: 26,
            },
        },
    ],
    errors: [],
    span: Span {
        start: 6,
        end: 26,
    },
}
