tests/snapshots/heredoc_nowdoc_tests__heredoc_multiline.snap
---
source: tests/heredoc_nowdoc_tests.rs
assertion_line: 81
expression: program
---
Program {
    statements: [
        Nop {
            span: Span {
                start: 0,
                end: 6,
            },
        },
        Expression {
            expr: Assign {
                var: Variable {
                    name: Span {
                        start: 6,
                        end: 11,
                    },
                    span: Span {
                        start: 6,
                        end: 11,
                    },
                },
                expr: InterpolatedString {
                    parts: [
                        String {
                            value: [
                                60,
                                104,
                                116,
                                109,
                                108,
                                62,
                                10,
                                60,
                                98,
                                111,
                                100,
                                121,
                                62,
                                10,
                                60,
                                104,
                                49,
                                62,
                                72,
                                101,
                                108,
                                108,
                                111,
                                60,
                                47,
                                104,
                                49,
                                62,
                                10,
                                60,
                                47,
                                98,
                                111,
                                100,
                                121,
                                62,
                                10,
                                60,
                                47,
                                104,
                                116,
                                109,
                                108,
                                62,
                                10,
                            ],
                            span: Span {
                                start: 22,
                                end: 67,
                            },
                        },
                    ],
                    span: Span {
                        start: 14,
                        end: 71,
                    },
                },
                span: Span {
                    start: 6,
                    end: 71,
                },
            },
            span: Span {
                start: 6,
                end: 73,
            },
        },
    ],
    errors: [],
    span: Span {
        start: 0,
        end: 73,
    },
}
