tests/snapshots/heredoc_nowdoc_tests__multiple_heredocs.snap
---
source: tests/heredoc_nowdoc_tests.rs
expression: program
---
Program {
    statements: [
        Expression {
            expr: Assign {
                var: Variable {
                    name: Span {
                        start: 6,
                        end: 8,
                    },
                    span: Span {
                        start: 6,
                        end: 8,
                    },
                },
                expr: InterpolatedString {
                    parts: [
                        String {
                            value: [
                                70,
                                105,
                                114,
                                115,
                                116,
                                10,
                            ],
                            span: Span {
                                start: 19,
                                end: 25,
                            },
                        },
                    ],
                    span: Span {
                        start: 11,
                        end: 29,
                    },
                },
                span: Span {
                    start: 6,
                    end: 29,
                },
            },
            span: Span {
                start: 6,
                end: 33,
            },
        },
        Expression {
            expr: Assign {
                var: Variable {
                    name: Span {
                        start: 31,
                        end: 33,
                    },
                    span: Span {
                        start: 31,
                        end: 33,
                    },
                },
                expr: InterpolatedString {
                    parts: [
                        String {
                            value: [
                                83,
                                101,
                                99,
                                111,
                                110,
                                100,
                                10,
                            ],
                            span: Span {
                                start: 44,
                                end: 51,
                            },
                        },
                    ],
                    span: Span {
                        start: 36,
                        end: 55,
                    },
                },
                span: Span {
                    start: 31,
                    end: 55,
                },
            },
            span: Span {
                start: 31,
                end: 57,
            },
        },
    ],
    errors: [],
    span: Span {
        start: 6,
        end: 57,
    },
}
